--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,15 +9,15 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-exec --no-startup-id xrandr --output Virtual1 --mode 1920x1080
+exec --no-startup-id xrandr --output Virtual1 --mode 1920x1200
 
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:IBM Plex Mono SmBld 12
 
-exec --no-startup-id feh --bg-scale ~/desktop-wallpaper/mountain.jpg
+exec_always --no-startup-id nitrogen --set-auto ~/.config/bg_images/
 
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
