--- a/.config/i3/config
+++ b/.config/i3/config
@@ -193,6 +193,12 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+#bar {
+#        status_command i3status
+#}
+
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+
+gaps inner 4px
+gaps outer 0px
+gaps bottom 0px
