--- a/.config/i3/config
+++ b/.config/i3/config
@@ -10,7 +10,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 exec --no-startup-id xrandr --output Virtual1 --mode 1920x1200
-
+exec --no-startup-id picom -b 
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
